<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lavender_background"
    tools:context=".UserReviewPage">

    <TextView
        android:id="@+id/review"
        android:layout_width="411dp"
        android:layout_height="100dp"
        android:fontFamily="cursive"
        android:fontFeatureSettings="italic"
        android:text="@string/my_review"
        android:textAlignment="center"
        android:textColor="@color/lavender"
        android:textSize="70dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/rating"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:text="@string/IsAnonymous"
        android:textColor="@color/white"
        android:textColorHint="@color/transparentBlue"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731" />

    <EditText
        android:id="@+id/rating"
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:backgroundTint="#F3F3F3"
        android:hint="enter 0-5 double"
        android:textColor="@color/yolkYellow"
        android:textColorHint="@color/yolkYellow"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/anon_btn"
        android:layout_width="80dp"
        android:layout_height="44dp"
        android:backgroundTint="#5B000000"
        android:onClick="onClickAnon"
        android:text="false"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/user_review_back_btn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:backgroundTint="#FFD24C"
        android:onClick="onClickBackFromMyReview"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickConfirm"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <TextView
        android:id="@+id/beach_name"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:text="Beach name"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />


    <TextView
        android:id="@+id/beach_name_val"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:hint="Beach name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_200"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/red"
        android:onClick="onClickDelete"
        android:text="Delete"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <ImageView
        android:id="@+id/review_image_upload_view"
        android:layout_width="386dp"
        android:layout_height="272dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:scaleX="1.0"
        android:scaleY="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="55dp"
        android:layout_height="46dp"
        android:indeterminateTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="@+id/review_image_upload_view"
        app:layout_constraintEnd_toEndOf="@+id/review_image_upload_view"
        app:layout_constraintStart_toStartOf="@+id/review_image_upload_view"
        app:layout_constraintTop_toTopOf="@+id/review_image_upload_view" />

    <Button
        android:id="@+id/upload_btn"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#281D4F8E"
        android:text="Upload"
        app:layout_constraintBottom_toTopOf="@+id/beach_name_val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/content_tv"
        android:layout_width="376dp"
        android:layout_height="96dp"
        android:backgroundTint="@color/white"
        android:gravity="top|left"
        android:hint="You have no review written for this beach. Write a new one here..."
        android:lines="5"
        android:textColor="@color/white"
        android:maxLines="8"
        android:scrollbars="vertical"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />
</androidx.constraintlayout.widget.ConstraintLayout>