...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInRegisterActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:hint="Name"
        android:textColorHint="@color/lavender"
        android:backgroundTint="@color/lavender"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:hint="Email"
        android:textColorHint="@color/lavender"
        android:backgroundTint="@color/lavender"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:hint="Password"
        android:textColorHint="@color/lavender"
        android:backgroundTint="@color/lavender"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#CE2C67C8"
        android:onClick="onClickNext"
...
