...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile"
    tools:context=".userProfileActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickProfileToMyReview"
        android:text="My review"
...
        app:layout_constraintEnd_toStartOf="@+id/pwd_tv"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/beachChoice"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        android:textSize="14dp"
        android:theme="@style/spinner_theme"
...
